@@ -1,4 +1,4 @@
-DIST arename-v2.0.tar.gz 73435 RMD160 a17675c7f50e153d258a7a483adc22bab0ae906a SHA1 b731625ff7bebf44e32c7db68c63c88fe221322e SHA256 13a0882c4ee279d2d87458304a48d0e8010201b3d784faefb5a4680845ad1eb8
-EBUILD arename-2.0.ebuild 859 RMD160 79923111288c5175f17d29322605af7a2d1fe3c4 SHA1 5b120fe8064fe0f4623a4524bffd440fafe8553a SHA256 9bbd9cd61ca7906f60c180d3063d78e61c724042d5f6dbb0799af5bf49604340
-MISC ChangeLog 251 RMD160 f03e4d9ff9927dbe2cb26bb03776d52afac24846 SHA1 b38bb2a8c24bf2747e629e39695e1377c0d8560e SHA256 abd41ecdcc93c9306ac3cc5b80700517a260ab0d3104656f80b7b661b159c128
+DIST arename-3.1.tar.gz 112521 RMD160 226e0b5387df00da9cf17a0bafebad768a0aed10 SHA1 6bc099f99e06d4de5393efff702cd92c1ce96ed7 SHA256 8975dca5f88de56ff9d0c752165c0ab5d1c8e4e89d1cdceb2e8f7304429d57fa
+EBUILD arename-3.1.ebuild 1751 RMD160 479e736154d12ef64e946a2d3d8cda0280f507b1 SHA1 ee7445253fd0036b15cb4654f9fddbb989f30da2 SHA256 ca5482e8df90d0aed80ab3b776ff3aeb81b83ae5faa76c2636a9f8ffb136b501
+MISC ChangeLog 548 RMD160 c78bb640eac970d91b2fc537eeb7af11998d657b SHA1 4f403381d8b7b47f52d549678222180a603304ef SHA256 4d55f772b5707b1cd2c71aed3a137178dfbfa0ef391b244f0c924940847a8924
 MISC metadata.xml 313 RMD160 25b78e2ed77356e3b1524a462d6b71751a83b646 SHA1 2244df37e0aa574b70b4110412098883095fae73 SHA256 703dde2ecd0025e6ee49035e9f4768b106812c18cd358d30b5f5a8878f6c37ae
