@@ -1,6 +1,14 @@
 # ChangeLog for media-sound/arename
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*arename-3.1 (05 Jul 2010)
+
+  05 Jul 2010; Michał Górny (sedzimir) <mgorny.3ehbo@mailnull.com>
+  -arename-2.0.ebuild, +arename-3.1.ebuild:
+  Version bump with basically rewritten ebuild. Tests are now supported,
+  perl module and docs are installed correctly and dependencies were
+  clarified.
 
   11 Jan 2009; Maximilian Gaß (mxey) <mxey@cloudconnected.org>
   +arename-2.0.ebuild, +metadata.xml:
